[tool.poetry]
name = "spinroom"
version = "0.1.0"
description = ""
authors = ["Shaheen Ahmed-Chowdhury <shaheen.ahmed@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.37.0"
gh = "^0.0.4"
transformers = "^4.43.3"
gradio = "^4.40.0"
torch = "^2.4.0"
torchvision = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
